deployments/kustomize/with-gateway-api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xdrienovskym2-ambulance-webapi
spec:
  parentRefs:
  - name: wac-hospital-gateway
    namespace: wac-hospital
  - name: wac-hospital-gateway
    namespace: wac-hospital-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /xdrienovskym2-api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /api
    backendRefs:
    - group: ""
      kind: Service
      name: xdrienovskym2-ambulance-webapi
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /xdrienovskym2-openapi-ui
    backendRefs:
    - group: ""
      kind: Service
      name: xdrienovskym2-openapi-ui
      port: 80
  - matches:
    - path:
        type: Exact
        value: /xdrienovskym2-openapi
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /openapi
    backendRefs:
    - group: ""
      kind: Service
      name: xdrienovskym2-ambulance-webapi
      port: 80
